# pygrade

./: .gitmodules  README.md  pyproject.toml
exercises/pygrade/: pandas_basics.py
numpy_exercises/: dshc.py  one.py  two.py
pygrade/: python_basics.py
tests/: test_numpy_exercises.py  test_python_basics.py  test_python_basics_40.py
tests/exercises/pygrade/: test_python_basics.py
