[tool.poetry]
name = "python-exercises"
version = "0.1.0"
description = ""
authors = ["Risa Nishiyama <lisa.nishiyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
